--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://79.137.192.189:5432/axiomus_dev
-    username: padergin
-    password: padergin
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -14,11 +14,11 @@ spring:
     open-in-view: false
 
   rabbitmq:
-    host: 79.137.192.189
-    port: 5672
-    username: axiomus
-    password: axiomus
-    virtual-host: /
+    host: ${SPRING_RABBITMQ_HOST}
+    port: ${SPRING_RABBITMQ_PORT}
+    username: ${SPRING_RABBITMQ_USERNAME}
+    password: ${SPRING_RABBITMQ_PASSWORD}
+    virtual-host: ${SPRING_RABBITMQ_VIRTUAL_HOST:/}
     listener:
       simple:
         auto-startup: true
@@ -34,9 +34,8 @@ app:
 
 telegram:
   bot:
-    username: "@axiomus_bot"
-#    token: "${TELEGRAM_BOT_TOKEN}"
-    token: "8473410682:AAFyLvNL3SOWQKt31OtpizpYlsfkswTwMTc"
+    token: ${TELEGRAM_BOT_TOKEN}
+    username: ${TELEGRAM_BOT_USERNAME}
     allowed-users: []
 logging:
   level:
